--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Space Exploration</title>
 </head>
 <body>
+    <img src="images/spacex.png" id = "main-logo" alt="spacex logo">
+
     <h1>Join the <span class="underline">exploration</span> </h1>
         <button class="btn">Apply!</button>
 </body>
