--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <title>Space Exploration</title>
 </head>
 <body>
+    <div id="hero">
     <img src="images/spacex.png" id = "main-logo" alt="spacex logo">
-
     <h1>Join the <span class="underline">exploration</span> </h1>
         <button class="btn">Apply!</button>
+    </div>
+    <h3>Terms and conditions apply</h3>
 </body>
 </html>
 
